exports[`<CheckboxList /> renders matches previous snapshot 1`] = `
<div
  className="form-group key-class ">
  <fieldset
    id="key"
    onBlur={[Function anonymous]}>
    <div
      className="selection-buttons">
      <div
        className="checkbox select-all-checkbox">
        <label>
          <input
            checked={true}
            name="select-all-checkbox"
            onClick={[Function anonymous]}
            type="checkbox"
            value="" />
          <span
            className="cr" />
          <span
            className="select-all-description">
            Select All
          </span>
        </label>
      </div>
      <button
        className="btn as-link"
        onClick={[Function anonymous]}
        type="button">
        Clear All
      </button>
    </div>
    <hr
      className="gtoc-checklist-hr" />
  </fieldset>
</div>
`;

exports[`<CheckboxList /> renders matches previous snapshot 2`] = `
<div
  className="form-group key-class ">
  <fieldset
    id="key"
    onBlur={[Function anonymous]}>
    <div
      className="selection-buttons">
      <div
        className="checkbox select-all-checkbox">
        <label>
          <input
            checked={false}
            name="select-all-checkbox"
            onClick={[Function anonymous]}
            type="checkbox"
            value="" />
          <span
            className="cr" />
          <span
            className="select-all-description">
            Select All
          </span>
        </label>
      </div>
      <button
        className="btn as-link"
        onClick={[Function anonymous]}
        type="button">
        Clear All
      </button>
    </div>
    <hr
      className="gtoc-checklist-hr" />
    1
    2
  </fieldset>
</div>
`;

exports[`<CheckboxList /> renders matches previous snapshot 3`] = `
<div
  className="form-group key-class ">
  <fieldset
    id="key"
    onBlur={[Function anonymous]}>
    <div
      className="selection-buttons">
      <div
        className="checkbox select-all-checkbox">
        <label>
          <input
            checked={false}
            name="select-all-checkbox"
            onClick={[Function anonymous]}
            type="checkbox"
            value="" />
          <span
            className="cr" />
          <span
            className="select-all-description">
            Select All
          </span>
        </label>
      </div>
      <button
        className="btn as-link"
        onClick={[Function anonymous]}
        type="button">
        Clear All
      </button>
    </div>
    <hr
      className="gtoc-checklist-hr" />
    1
    2
  </fieldset>
</div>
`;
